[gd_scene load_steps=10 format=3 uid="uid://xswqjtmixxqd"]

[ext_resource type="Script" path="res://Scenes/board.gd" id="1_kc3oj"]
[ext_resource type="PackedScene" uid="uid://3rom3q1gx1vj" path="res://Scenes/player.tscn" id="3_5q1sp"]
[ext_resource type="PackedScene" uid="uid://cn63p5knusmb8" path="res://Scenes/Monsters/monster.tscn" id="3_843tu"]
[ext_resource type="TileSet" uid="uid://dhawuf6ltsj5v" path="res://Scenes/tile_set.tres" id="3_eokke"]
[ext_resource type="PackedScene" uid="uid://dnw5nev5mdb7a" path="res://Scenes/wall.tscn" id="4_b4iip"]
[ext_resource type="Texture2D" uid="uid://gdoqnjhykgnw" path="res://Graphics/Big_Demon_Sprite.png" id="4_u0wlj"]
[ext_resource type="FontFile" uid="uid://c6dirucg1bn8n" path="res://Graphics/FFFFORWA.TTF" id="8_yuujc"]
[ext_resource type="PackedScene" uid="uid://wjb1nwy7ro4t" path="res://Scenes/pause_menu.tscn" id="9_o88yr"]
[ext_resource type="PackedScene" uid="uid://b32kq6mguo0h" path="res://Scenes/fail_area.tscn" id="9_raprs"]

[node name="Board" type="Node2D"]
script = ExtResource("1_kc3oj")
Monster1 = ExtResource("3_843tu")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_eokke")
format = 2
layer_0/tile_data = PackedInt32Array(1048597, 131072, 4, 1048598, 262144, 4, 1048595, 131072, 4, 1048596, 196608, 4, 1048593, 131072, 4, 1048594, 196608, 4, 1048591, 131072, 4, 1048592, 196608, 4, 1048589, 131072, 4, 1048590, 196608, 4, 1048587, 131072, 4, 1048588, 196608, 4, 1048585, 131072, 4, 1048586, 196608, 4, 1048583, 131072, 4, 1048584, 196608, 4, 1048582, 65536, 4, 917510, 65536, 2, 983046, 65536, 3, 786438, 65536, 2, 851974, 65536, 3, 655366, 65536, 2, 720902, 65536, 3, 524294, 65536, 2, 589830, 65536, 3, 393222, 65536, 2, 458758, 65536, 3, 262150, 65536, 2, 327686, 65536, 2, 131078, 65536, 2, 196614, 65536, 3, 589846, 262144, 2, 458774, 262144, 2, 524310, 262144, 3, 327702, 262144, 2, 393238, 262144, 3, 196630, 262144, 2, 262166, 262144, 3, 131094, 262144, 3, 917511, 786432, 4, 983047, 786432, 5, 917512, 851968, 4, 983048, 851968, 5, 917513, 786432, 4, 983049, 786432, 5, 917514, 851968, 4, 983050, 851968, 5, 917515, 786432, 4, 983051, 786432, 5, 917516, 851968, 4, 983052, 851968, 5, 786443, 851968, 5, 851979, 851968, 4, 786444, 786432, 5, 851980, 851968, 4, 786441, 851968, 5, 851977, 851968, 4, 786442, 786432, 5, 851978, 851968, 4, 786439, 786432, 4, 851975, 786432, 5, 786440, 786432, 5, 851976, 851968, 5, 655367, 786432, 4, 720903, 786432, 5, 655368, 786432, 5, 720904, 786432, 4, 655369, 851968, 5, 720905, 851968, 4, 655370, 786432, 5, 720906, 786432, 4, 655371, 851968, 5, 720907, 851968, 4, 655372, 786432, 5, 720908, 786432, 4, 917517, 786432, 4, 983053, 786432, 5, 917518, 851968, 4, 983054, 851968, 5, 917519, 786432, 4, 983055, 786432, 5, 917520, 786432, 5, 983056, 851968, 5, 917521, 851968, 5, 983057, 786432, 5, 917522, 851968, 4, 983058, 851968, 5, 917523, 786432, 4, 983059, 786432, 5, 917524, 851968, 4, 983060, 851968, 5, 786451, 851968, 4, 851987, 851968, 4, 786452, 851968, 4, 851988, 851968, 4, 786453, 851968, 4, 851989, 851968, 4, 917525, 786432, 4, 983061, 786432, 5, 655379, 851968, 4, 720915, 851968, 4, 655380, 851968, 4, 720916, 1245184, 4, 655377, 851968, 4, 720913, 851968, 4, 655378, 786432, 5, 720914, 786432, 4, 655375, 851968, 4, 786448, 851968, 4, 851984, 786432, 4, 786445, 851968, 5, 851981, 851968, 4, 786446, 851968, 4, 851982, 851968, 4, 786449, 851968, 4, 851985, 851968, 4, 786450, 851968, 4, 851986, 1245184, 4, 655381, 851968, 4, 720917, 851968, 4, 655373, 851968, 5, 720909, 851968, 4, 655374, 786432, 4, 720910, 851968, 4, 524299, 851968, 4, 589835, 851968, 4, 524300, 851968, 4, 589836, 786432, 4, 524297, 1310720, 4, 589833, 851968, 4, 524298, 1310720, 4, 589834, 786432, 4, 851990, 262144, 2, 917526, 1572864, 4, 983062, 1572864, 5, 786454, 262144, 2, 720918, 262144, 2, 655382, 262144, 2, 589840, 851968, 4, 655376, 786432, 4, 720912, 786432, 4, 589841, 851968, 4, 589838, 851968, 4, 589839, 851968, 4, 720911, 851968, 4, 786447, 851968, 4, 851983, 851968, 4, 524307, 851968, 5, 589843, 851968, 4, 524308, 1245184, 4, 589844, 851968, 4, 524309, 1310720, 4, 589845, 851968, 4, 524304, 786432, 5, 524305, 851968, 5, 524306, 786432, 5, 589842, 851968, 4, 393232, 851968, 4, 458768, 786432, 4, 393233, 851968, 4, 458769, 851968, 4, 393234, 851968, 4, 458770, 786432, 4, 393229, 851968, 4, 458765, 851968, 4, 393230, 851968, 4, 458766, 786432, 4, 393231, 851968, 4, 458767, 851968, 4, 393226, 851968, 4, 458762, 851968, 4, 393227, 851968, 4, 458763, 851968, 4, 393228, 851968, 4, 458764, 786432, 4, 393223, 786432, 5, 458759, 786432, 4, 393224, 851968, 5, 458760, 851968, 4, 393225, 1310720, 4, 458761, 851968, 4, 524296, 851968, 5, 589832, 786432, 4, 524295, 786432, 5, 589831, 786432, 4, 524301, 851968, 4, 589837, 851968, 4, 524302, 851968, 4, 524303, 851968, 5, 458771, 851968, 4, 458772, 851968, 4, 458773, 851968, 4, 327697, 1441792, 3, 327698, 1441792, 3, 327699, 1441792, 3, 327700, 1441792, 3, 393235, 851968, 4, 393236, 851968, 4, 393237, 851968, 4, 262161, 1441792, 5, 262162, 1376256, 5, 262163, 1441792, 5, 262164, 1376256, 5, 196625, 1441792, 4, 196626, 1376256, 4, 196627, 1441792, 4, 196628, 1376256, 5, 327694, 1441792, 3, 327695, 1441792, 3, 327696, 1441792, 3, 327690, 1441792, 3, 327691, 1441792, 3, 327692, 1441792, 3, 327693, 1441792, 3, 327687, 1441792, 3, 327688, 1441792, 3, 327689, 1441792, 3, 262160, 1376256, 5, 262159, 1441792, 5, 262158, 1376256, 5, 262157, 1441792, 5, 262156, 1376256, 5, 262155, 1441792, 5, 262154, 1441792, 5, 262153, 1376256, 5, 262152, 1441792, 5, 262151, 1376256, 5, 196617, 1376256, 4, 196618, 1441792, 4, 196616, 1441792, 5, 196615, 1376256, 5, 196620, 1441792, 5, 196621, 1441792, 4, 196619, 1376256, 5, 196622, 1376256, 4, 196623, 1441792, 4, 196624, 1376256, 4, 196629, 1441792, 5, 262165, 1441792, 5, 327701, 1441792, 3, 131095, 983043, 2, 196631, 983043, 2, 262167, 983043, 2, 327703, 983043, 2, 393239, 983043, 2, 458775, 983043, 2, 524311, 983043, 2, 589847, 983043, 2, 655383, 983043, 2, 720919, 983043, 2, 786455, 983043, 2, 851991, 983043, 2, 917527, 983043, 2, 983063, 983043, 2, 1048599, 983043, 2, 1048600, 983043, 2, 1048601, 983043, 2, 1048602, 983043, 2, 1048603, 983043, 2, 1048604, 983043, 2, 1048605, 983043, 2, 983069, 983043, 2, 917533, 983043, 2, 851997, 983043, 2, 786461, 983043, 2, 720925, 983043, 2, 655389, 983043, 2, 589853, 983043, 2, 524317, 983043, 2, 458781, 983043, 2, 393245, 983043, 2, 327709, 983043, 2, 262173, 983043, 2, 196637, 983043, 2, 131101, 983043, 2, 131100, 983043, 2, 131099, 983043, 2, 131098, 983043, 2, 131097, 983043, 2, 131096, 983043, 2, 65559, 983043, 2, 65560, 983043, 2, 65561, 983043, 2, 65562, 983043, 2, 65563, 983043, 2, 65564, 983043, 2, 65565, 983043, 2, 29, 983043, 2, 28, 983043, 2, 27, 983043, 2, 26, 983043, 2, 25, 983043, 2, 24, 983043, 2, 23, 983043, 2, 196632, 983043, 2, 196633, 983043, 2, 196634, 983043, 2, 196635, 983043, 2, 196636, 983043, 2, 262170, 983043, 2, 262169, 983043, 2, 262168, 983043, 2, 262171, 983043, 2, 262172, 983043, 2, 327705, 983043, 2, 327704, 983043, 2, 327706, 983043, 2, 327707, 983043, 2, 327708, 983043, 2, 393240, 983043, 2, 393241, 983043, 2, 393242, 983043, 2, 393243, 983043, 2, 393244, 983043, 2, 458777, 983043, 2, 458778, 983043, 2, 458779, 983043, 2, 458780, 983043, 2, 458776, 983043, 2, 524316, 983043, 2, 524315, 983043, 2, 524314, 983043, 2, 524313, 983043, 2, 524312, 983043, 2, 589849, 983043, 2, 589848, 983043, 2, 589850, 983043, 2, 589851, 983043, 2, 589852, 983043, 2, 655386, 983043, 2, 655385, 983043, 2, 655384, 983043, 2, 720921, 983043, 2, 720922, 983043, 2, 655387, 983043, 2, 655388, 983043, 2, 720920, 983043, 2, 786456, 983043, 2, 786457, 983043, 2, 720923, 983043, 2, 720924, 983043, 2, 786458, 983043, 2, 786459, 983043, 2, 851992, 983043, 2, 851993, 983043, 2, 851994, 983043, 2, 851995, 983043, 2, 786460, 983043, 2, 851996, 983043, 2, 917532, 983043, 2, 983068, 983043, 2, 983067, 983043, 2, 983066, 983043, 2, 983065, 983043, 2, 983064, 983043, 2, 917530, 983043, 2, 917531, 983043, 2, 917529, 983043, 2, 917528, 983043, 2, 1048581, 983043, 2, 1048580, 983043, 2, 1048579, 983043, 2, 1048578, 983043, 2, 1048577, 983043, 2, 1048576, 983043, 2, 983040, 983043, 2, 917504, 983043, 2, 851968, 983043, 2, 786432, 983043, 2, 720896, 983043, 2, 655360, 983043, 2, 589824, 983043, 2, 524288, 983043, 2, 458752, 983043, 2, 393216, 983043, 2, 327680, 983043, 2, 262144, 983043, 2, 196608, 983043, 2, 131072, 983043, 2, 65536, 983043, 2, 0, 983043, 2, 1, 983043, 2, 2, 983043, 2, 3, 983043, 2, 4, 983043, 2, 5, 983043, 2, 65541, 983043, 2, 131077, 983043, 2, 196613, 983043, 2, 262149, 983043, 2, 327685, 983043, 2, 393221, 983043, 2, 458757, 983043, 2, 524293, 983043, 2, 589829, 983043, 2, 655365, 983043, 2, 720901, 983043, 2, 65540, 983043, 2, 65539, 983043, 2, 65538, 983043, 2, 65537, 983043, 2, 131073, 983043, 2, 196609, 983043, 2, 196610, 983043, 2, 131074, 983043, 2, 131075, 983043, 2, 131076, 983043, 2, 196612, 983043, 2, 196611, 983043, 2, 262147, 983043, 2, 262146, 983043, 2, 262145, 983043, 2, 262148, 983043, 2, 327682, 983043, 2, 327681, 983043, 2, 327683, 983043, 2, 327684, 983043, 2, 393217, 983043, 2, 393218, 983043, 2, 393220, 983043, 2, 393219, 983043, 2, 458754, 983043, 2, 458753, 983043, 2, 458755, 983043, 2, 458756, 983043, 2, 524292, 983043, 2, 524291, 983043, 2, 524290, 983043, 2, 524289, 983043, 2, 589825, 983043, 2, 589826, 983043, 2, 589827, 983043, 2, 589828, 983043, 2, 655363, 983043, 2, 655364, 983043, 2, 655362, 983043, 2, 720898, 983043, 2, 720897, 983043, 2, 720899, 983043, 2, 655361, 983043, 2, 720900, 983043, 2, 786437, 983043, 2, 851973, 983043, 2, 917509, 983043, 2, 983045, 983043, 2, 983044, 983043, 2, 983043, 983043, 2, 983042, 983043, 2, 983041, 983043, 2, 917505, 983043, 2, 851969, 983043, 2, 786434, 983043, 2, 786435, 983043, 2, 851971, 983043, 2, 917507, 983043, 2, 917506, 983043, 2, 851970, 983043, 2, 786436, 983043, 2, 851972, 983043, 2, 786433, 983043, 2, 917508, 983043, 2, 65543, 720896, 3, 65544, 1179648, 2, 65545, 1179648, 2, 65546, 1179648, 2, 65547, 1179648, 2, 65548, 1179648, 2, 65549, 1179648, 2, 65550, 1179648, 2, 65551, 1179648, 2, 65552, 1179648, 2, 65553, 1179648, 2, 65554, 1179648, 2, 65555, 1179648, 2, 65556, 1179648, 2, 65557, 917504, 3, 21, 917504, 1, 20, 1441795, 1, 19, 1441795, 1, 18, 1441795, 1, 17, 1441795, 1, 16, 1441795, 1, 15, 1441795, 1, 14, 1441795, 1, 13, 1441795, 1, 12, 1441795, 1, 11, 1441795, 1, 10, 1441795, 1, 9, 1441795, 1, 8, 1441795, 1, 7, 720899, 1, 65542, 655360, 3, 65558, 262144, 1, 22, 983043, 2, 6, 983043, 2, 131093, 1441792, 4, 131092, 1376256, 4, 131091, 1376256, 5, 131090, 1376256, 5, 131089, 1441792, 5, 131088, 1376256, 5, 131087, 1441792, 5, 131086, 1376256, 5, 131085, 1441792, 5, 131084, 1376256, 5, 131083, 1376256, 4, 131082, 1376256, 5, 131081, 1441792, 5, 131080, 1441792, 4, 131079, 1376256, 4)

[node name="Monsters" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_5q1sp")]
position = Vector2(232, 27)

[node name="Current_sprite" type="Sprite2D" parent="."]

[node name="Next_sprite" type="Sprite2D" parent="."]
position = Vector2(457, 48)
texture = ExtResource("4_u0wlj")

[node name="Next" type="Label" parent="."]
offset_left = 374.0
offset_top = 42.0
offset_right = 431.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "Next:"

[node name="Wall_Left" parent="." instance=ExtResource("4_b4iip")]
modulate = Color(1, 1, 1, 0)
position = Vector2(24, 381)
scale = Vector2(1.785, 1)

[node name="Wall_Right" parent="." instance=ExtResource("4_b4iip")]
modulate = Color(1, 1, 1, 0)
position = Vector2(457, 397)
scale = Vector2(1.905, 1.03)

[node name="Wall_Ground" parent="." instance=ExtResource("4_b4iip")]
modulate = Color(1, 1, 1, 0)
position = Vector2(357, 353)
rotation = -1.5708
scale = Vector2(1.89, 1.65)

[node name="Fusion_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Spawn_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="Score_label" type="Label" parent="."]
offset_left = 12.0
offset_top = 15.0
offset_right = 86.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "Score:"
horizontal_alignment = 1

[node name="Score_number" type="Label" parent="."]
offset_left = 11.0
offset_top = 46.0
offset_right = 87.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "0"
horizontal_alignment = 1

[node name="Lose_Menu" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Lose_Menu"]
layout_mode = 0
offset_left = 113.0
offset_top = 22.0
offset_right = 353.0
offset_bottom = 258.0
color = Color(0.105882, 0.105882, 0.105882, 0.690196)

[node name="Lose" type="Label" parent="Lose_Menu"]
layout_mode = 0
offset_left = 178.0
offset_top = 65.0
offset_right = 290.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "YOU LOST"
horizontal_alignment = 1

[node name="New_Round" type="Button" parent="Lose_Menu"]
layout_mode = 0
offset_left = 176.0
offset_top = 128.0
offset_right = 296.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "New Round"

[node name="Main_Menu_label" type="Button" parent="Lose_Menu"]
layout_mode = 0
offset_left = 173.0
offset_top = 170.0
offset_right = 297.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "Main Menu"

[node name="Quit" type="Button" parent="Lose_Menu"]
layout_mode = 0
offset_left = 206.0
offset_top = 218.0
offset_right = 256.0
offset_bottom = 249.0
theme_override_fonts/font = ExtResource("8_yuujc")
text = "Quit"

[node name="Fail_Area" parent="." instance=ExtResource("9_raprs")]
position = Vector2(233, 69)

[node name="Pause_Menu" parent="." instance=ExtResource("9_o88yr")]
offset_left = 239.0
offset_top = 151.0
offset_right = 239.0
offset_bottom = 151.0

[connection signal="pressed" from="Lose_Menu/New_Round" to="." method="_on_new_round_pressed"]
[connection signal="pressed" from="Lose_Menu/Main_Menu_label" to="." method="_on_main_menu_label_pressed"]
[connection signal="pressed" from="Lose_Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="game_lost" from="Fail_Area" to="." method="_on_fail_area_game_lost"]
